tests/spec/format/snapshots/comment_with_close_brace_inside_nested_match_in_select.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f(c: Channel<int>) -> int {
    select {
      match c.receive() {
        Some(v) => v,
        None => 0,
        // contains } early
        // still nested
      },
      _ => 1,
    }
  }
---
fn f(c: Channel<int>) -> int {
  select {
    match c.receive() {
      Some(v) => v,
      None => 0,

      // contains } early
      // still nested
    },
    _ => 1,
  }
}
