tests/spec/format/snapshots/compound_assignment_add.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { x += 5 }"
---
fn test() {
  x += 5
}
