tests/spec/format/snapshots/compound_assignment_bitandnot.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { x &^= 3 }"
---
fn test() {
  x &^= 3
}
