tests/spec/format/snapshots/compound_assignment_bitxor.snap
---
source: tests/spec/format/mod.rs
description: "input: fn test() { x ^= 3 }"
---
fn test() {
  x ^= 3
}
