tests/spec/format/snapshots/compound_assignment_div.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { x /= 4 }"
---
fn test() {
  x /= 4
}
