tests/spec/format/snapshots/compound_assignment_mul.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { x *= 2 }"
---
fn test() {
  x *= 2
}
