tests/spec/format/snapshots/compound_assignment_shiftright.snap
---
source: tests/spec/format/mod.rs
description: "input: fn test() { x >>= 2 }"
---
fn test() {
  x >>= 2
}
